@@ -1,3 +1,10 @@
+Thu Jul 22 22:14:59 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* regexec.c (onig_search): don't skip non-ANYCHARs when
+	  .* fails to match. This causes to fail matching
+	  ANYCHAR_STAR with LOOK_BEHIND. This fix is workaround
+	  and disable the optimization. [ruby-dev:41851]
+
 Thu Jul 22 22:13:48 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* thread_pthread.c (get_stack): fix memory leak; pthread_attr_destory
